# Incudine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
Ignite/: CMakeLists.txt
Ignite/src/: main.cpp
Ignite/src/bridge/: Actor.h  BitmapFont.h  CaretMeasureData.h  ClientInstance.h  Color.h  DynamicStruct.h  GuiData.h  LocalPlayer.h  MinecraftUIRenderContext.h  Mob.h  Player.h  RectangleArea.h  TextMeasureData.h
Ignite/src/hooks/: ClientInstanceHook.cpp  ClientInstanceHook.h  KeyHook.cpp  KeyHook.h  MouseHook.h  UIContextHook.cpp  UIContextHook.h
Ignite/src/modules/: Item.h  Manager.h  Module.h  ModuleManager.h  Renderable.h
Ignite/src/modules/impl/: Keystrokes.cpp  Keystrokes.h  ModInfo.cpp  ModInfo.h
Ignite/src/util/: IMath.h  IMem.cpp  IMem.h  InputUtils.h  Log.h  RenderUtils.cpp  RenderUtils.h  SigInfo.h
Incudine/: CMakeLists.txt
Incudine/src/: main.cpp
Incudine/src/bridge/: Actor.h  BitmapFont.h  CaretMeasureData.h  ClientInstance.h  Color.h  DynamicStruct.h  GuiData.h  LocalPlayer.h  MinecraftUIRenderContext.h  Mob.h  Player.h  RectangleArea.h  TextMeasureData.h
Incudine/src/hooks/: ClientInstanceHook.cpp  ClientInstanceHook.h  KeyHook.cpp  KeyHook.h  MouseHook.cpp  MouseHook.h  UIContextHook.cpp  UIContextHook.h
Incudine/src/modules/: Item.h  Manager.h  Module.h  ModuleManager.h  Renderable.h
Incudine/src/modules/impl/: Keystrokes.cpp  Keystrokes.h  ModGui.cpp  ModGui.h  ModInfo.cpp  ModInfo.h
Incudine/src/util/: IMath.h  IMem.cpp  IMem.h  InputUtils.cpp  InputUtils.h  Log.cpp  Log.h  RenderUtils.cpp  RenderUtils.h  SigInfo.h  VersionUtils.cpp  VersionUtils.h
Loader/: CMakeLists.txt
Loader/src/: escalation.cpp  escalation.h  loadlib.cpp  loadlib.h  main.cpp  process.cpp  process.h
